--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebaseui": "^4.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-firebaseui": "^4.1.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
