--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "date-and-time": "^0.14.2",
     "firebase": "^8.2.3",
     "firebaseui": "^4.7.1",
     "react": "^17.0.1",
