--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "firebase": "^8.2.7",
+    "image-file-resize": "^1.0.3",
+    "material-ui-dropzone": "^3.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-photo-gallery": "^8.0.0",
     "react-scripts": "4.0.2",
+    "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
   },
