--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.1",
+    "react-fade-in": "^2.0.1",
     "react-photo-gallery": "^8.0.0",
     "react-scripts": "4.0.2",
     "styled-components": "^5.2.1",
