--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.1",
     "react-fade-in": "^2.0.1",
+    "react-full-screen": "^1.0.1",
+    "react-images": "^1.2.0-beta.5",
     "react-photo-gallery": "^8.0.0",
     "react-scripts": "4.0.2",
+    "react-ticker": "^1.2.2",
     "styled-components": "^5.2.1",
-    "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
