--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.2",
     "react-ticker": "^1.2.2",
     "styled-components": "^5.2.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
